--- a/index.html
+++ b/index.html
@@ -23,12 +23,22 @@
         <p class="profile__about-me">Исследователь океана</p>
       </div>
       <button class="profile__add-button pointer"></button>
-    </section>
-    <!-- <div class="popup popup_opened">
-      <div class="popup__container">
-        <h2 class="popup__title">Редактировать профиль</h2>
+      <div class="popup">
+        <div class="popup__container">
+          <button class="popup__close pointer"></button>
+          <h2 class="popup__title">Редактировать профиль</h2>
+          <form class="popup__form">
+            <label class="popup__label">
+              <input type="text" class="popup__name">
+            </label>
+            <label class="popup__label">
+              <input type="text" class="popup__job">
+            </label>
+            <input class="popup__submit" type="submit" value="Сохранить">
+          </form>
+        </div>
       </div>
-    </div> -->
+    </section>
     <section class="gallary">
       <ul class="gallary__list">
         <li class="gallary__item">
@@ -91,7 +101,7 @@
   <footer class="footer">
     <p class="footer__copyright">&copy; 2022 Mesto Russia</p>
   </footer>
-
+  <script src="./pages/index.js"></script>
 </body>
 
 </html>
