hotfix bem-name

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
           </form>
         </div>
       </div>
-      <div class="popup popup__addcard">
+      <div class="popup popup_addcard">
         <div class="popup__container">
           <button type="button" class="popup__close"></button>
           <h3 class="popup__title">Новое место</h3>
@@ -46,11 +46,11 @@
       </div>
     </section>
     <section class="gallary">
-            <div class="popup popup__view-card">
+            <div class="popup popup_view-card">
         <div class="popup__container">
           <button type="button" class="popup__close"></button>
-          <img src="#" alt="name" class="card__image">
-          <h2 class="card__title"></h2>
+          <img src="#" alt="name" class="popup__view-card-image">
+          <h2 class="popup__view-card-title"></h2>
         </div>
       </div>
       <ul class="gallary__list">
